--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "safey-observatin-app",
+  "name": "safety-observations",
   "version": "1.0.0",
-  "description": "",
+  "description": "Safety Observation App",
   "main": "server.js",
-"scripts": {
-  "start": "node server.js"
-}
+  "scripts": {
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "exceljs": "^4.4.0",
-    "express": "^5.2.1",
-    "node-cron": "^4.2.1",
-    "nodemailer": "^8.0.1",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.8",
+    "node-cron": "^3.0.3",
+    "sqlite3": "^5.1.6"
   }
 }
