--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+  "sqlite3": "^5.1.6"
+}
     "body-parser": "^1.20.2",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
