--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "safety-observations",
   "version": "1.0.0",
-  "description": "Safety Observation App",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-  "sqlite3": "^5.1.6"
-}
-    "body-parser": "^1.20.2",
-    "exceljs": "^4.4.0",
     "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "sqlite3": "^5.1.6",
+    "exceljs": "^4.4.0",
     "nodemailer": "^6.9.8",
-    "node-cron": "^3.0.3",
-    "sqlite3": "^5.1.6"
+    "node-cron": "^3.0.3"
   }
 }
