--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@sendgrid/mail": "^8.1.6",
     "body-parser": "^1.20.2",
-    "sqlite3": "^5.1.6",
     "exceljs": "^4.4.0",
-    "nodemailer": "^6.9.8",
-    "node-cron": "^3.0.3"
+    "express": "^4.18.2",
+    "node-cron": "^3.0.3",
+    "resend": "^6.9.1",
+    "sqlite3": "^5.1.6"
   }
 }
