--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
     "body-parser": "^1.20.2",
+    "dotenv": "^17.2.4",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
