--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 diff --git a/render.yaml b/render.yaml
-index 71a9fca4f54f6f9fb7d89c928e5ddde7c343345b..9bd756b9610579b11ebc168ab26e77667f548e08 100644
+index 71a9fca4f54f6f9fb7d89c928e5ddde7c343345b..be3514d3e85e9034e7082d3bc7800239e737591a 100644
 --- a/render.yaml
 +++ b/render.yaml
 @@ -1,7 +1,14 @@
@@ -8,8 +8,9 @@ index 71a9fca4f54f6f9fb7d89c928e5ddde7c343345b..9bd756b9610579b11ebc168ab26e7766
      name: safety-observations
      env: node
      buildCommand: npm install --build-from-source
-     startCommand: node server.js
+-    startCommand: node server.js
 -
++    startCommand: npm run start:render
 +    healthCheckPath: /health
 +    envVars:
 +      - key: JSONBIN_API_KEY
